--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -355,44 +355,50 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "General", -1, "Button", BS_GROUPBOX, 44, 29, 336, 36
   CONTROL "Código de barras", -1, "Button", BS_GROUPBOX, 382, 29, 108, 251
-  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 67, 336, 69
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 138, 336, 81
+  CONTROL "Clasificación", -1, "Button", BS_GROUPBOX, 44, 67, 336, 73
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 220, 336, 61
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 98, 39, 76, 11
   CONTROL "", 130, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 51, 279, 11
   CONTROL "Añ&d [F2]", 300, "Button", WS_TABSTOP, 387, 39, 33, 14
   CONTROL "&Mod [F3]", 310, "Button", WS_TABSTOP, 420, 39, 33, 14
   CONTROL "&Elim [F4]", 320, "Button", WS_TABSTOP, 453, 39, 33, 14
   CONTROL "", 330, "TXBrowse", 0x00200000, 388, 53, 98, 222
-  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 74, 56, 11
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 156, 74, 221, 11
-  CONTROL "", 270, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 86, 56, 11
-  CONTROL "", 271, "Edit", WS_BORDER|WS_TABSTOP, 156, 86, 221, 11
-  CONTROL "", 350, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 98, 56, 11
-  CONTROL "", 351, "Edit", WS_BORDER, 156, 98, 206, 11
-  CONTROL "", 352, "TBitmap", 0x00800000, 363, 98, 14, 11
-  CONTROL "", 355, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 110, 56, 11
-  CONTROL "", 356, "Edit", WS_BORDER, 156, 110, 206, 11
-  CONTROL "", 357, "TBitmap", 0x00800000, 363, 110, 14, 11
-  CONTROL "", 390, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 122, 56, 11
-  CONTROL "", 391, "Edit", WS_BORDER, 156, 122, 221, 11
-  CONTROL "Convertir unidades", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 98, 148, 73, 10
-  CONTROL "Obsoleto", 139, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 98, 161, 44, 10
-  CONTROL "Solicitar número de serie", 136, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 98, 174, 90, 10
-  CONTROL "Autoserializar", 138, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 109, 187, 55, 10
-  CONTROL "Solicitar número de lote", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 233, 88, 10
-  CONTROL "", 610, "Edit", WS_BORDER|WS_TABSTOP, 98, 245, 80, 11
+  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 76, 56, 11
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 156, 76, 221, 11
+  CONTROL "", 270, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 88, 56, 11
+  CONTROL "", 271, "Edit", WS_BORDER|WS_TABSTOP, 156, 88, 221, 11
+  CONTROL "", 350, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 100, 56, 11
+  CONTROL "", 351, "Edit", WS_BORDER, 156, 100, 206, 11
+  CONTROL "", 352, "TBitmap", 0x00800000, 363, 100, 14, 11
+  CONTROL "", 355, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 112, 56, 11
+  CONTROL "", 356, "Edit", WS_BORDER, 156, 112, 206, 11
+  CONTROL "", 357, "TBitmap", 0x00800000, 363, 112, 14, 11
+  CONTROL "", 390, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 98, 124, 56, 11
+  CONTROL "", 391, "Edit", WS_BORDER, 156, 124, 221, 11
+  CONTROL "Convertir unidades", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 232, 73, 10
+  CONTROL "Producto obsoleto ", 139, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 243, 256, 128, 10
+  CONTROL "Solicitar número de serie", 136, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 192, 90, 10
+  CONTROL "Autoserializar", 138, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 98, 205, 55, 10
+  CONTROL "Solicitar número de lote", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 153, 88, 10
+  CONTROL "", 610, "Edit", WS_BORDER|WS_TABSTOP, 98, 165, 101, 11
   CONTROL "Código", -1, "Static", WS_GROUP, 49, 42, 33, 8
   CONTROL "Descripción", -1, "Static", WS_GROUP, 49, 54, 39, 8
-  CONTROL "Familia", -1, "Static", WS_GROUP, 49, 77, 33, 8
-  CONTROL "Tipo artículo", 888, "Static", WS_GROUP, 49, 89, 47, 8
-  CONTROL "Categoría", -1, "Static", WS_GROUP, 49, 101, 35, 8
-  CONTROL "Fabricante", -1, "Static", WS_GROUP, 49, 125, 47, 8
-  CONTROL "Temporada", -1, "Static", WS_GROUP, 49, 113, 41, 8
+  CONTROL "Familia", -1, "Static", WS_GROUP, 49, 79, 33, 8
+  CONTROL "Tipo artículo", 888, "Static", WS_GROUP, 49, 91, 47, 8
+  CONTROL "Categoría", -1, "Static", WS_GROUP, 49, 103, 35, 8
+  CONTROL "Fabricante", -1, "Static", WS_GROUP, 49, 127, 47, 8
+  CONTROL "Temporada", -1, "Static", WS_GROUP, 49, 115, 41, 8
   CONTROL "", 500, "TBitmap", 0x0000020e, 4, 3, 34, 30, 0x00000020
   CONTROL "Datos generales del artículo", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
-  CONTROL "Actual", -1, "Static", WS_GROUP, 49, 248, 25, 8
-  CONTROL "Lote", -1, "Button", BS_GROUPBOX, 44, 223, 336, 37
-  CONTROL "Producto terminado", 620, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 97, 201, 90, 10
+  CONTROL "Lote actual", -1, "Static", WS_GROUP, 49, 168, 41, 8
+  CONTROL "Lote", -1, "Button", BS_GROUPBOX, 44, 142, 336, 37
+  CONTROL "Numero de serie", -1, "Button", BS_GROUPBOX, 44, 181, 336, 37
+  CONTROL "Aplicar factor de conversión", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 244, 101, 10
+  CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 98, 256, 62, 11
+  CONTROL "Factor", 4001, "Static", WS_GROUP, 49, 256, 33, 8
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 288, 232, 41, 11
+  CONTROL "", 251, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 332, 232, 41, 41
+  CONTROL "Caducidad", 4002, "Static", WS_GROUP, 243, 232, 40, 8
 }
 
 ARTKITCAT DIALOG DISCARDABLE 30, 106, 311, 105
@@ -6081,30 +6087,32 @@ FONT 8, "MS Sans Serif"
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 103, 232, 3
 }
 
-TIPART DIALOG DISCARDABLE 60, 16, 348, 150
+TIPART DIALOG DISCARDABLE 60, 16, 348, 181
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Tipos de artículos"
 FONT 8, "Helv"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 58, 16, 33, 11
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 58, 29, 216, 11
-  CONTROL "Publicar", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 57, 60, 10
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 58, 68, 216, 11
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 58, 81, 216, 11
-  CONTROL "", 140, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 58, 94, 33, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 58, 107, 40, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 121, 129, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 176, 129, 50, 14
-  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 231, 129, 50, 14
+  CONTROL "", 200, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 58, 56, 113, 95
+  CONTROL "Publicar", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 89, 39, 10
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 58, 100, 216, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 58, 113, 216, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 58, 126, 40, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 58, 139, 40, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 121, 158, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 176, 158, 50, 14
+  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 231, 158, 50, 14
   CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 2, 3, 278, 41
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 19, 27, 8
   CONTROL "Descripción ", -1, "Static", WS_GROUP, 8, 32, 45, 8
-  CONTROL "Imagen", -1, "Static", WS_GROUP, 8, 84, 29, 8
+  CONTROL "Imagen", -1, "Static", WS_GROUP, 8, 116, 29, 8
   CONTROL "", 600, "TBitmap", 0x00800000, 283, 7, 60, 50
-  CONTROL "Comercio eléctronico", -1, "Button", BS_GROUPBOX, 2, 46, 278, 80
-  CONTROL "ID web", -1, "Static", WS_GROUP, 8, 97, 27, 8
-  CONTROL "Orden Internet", -1, "Static", WS_GROUP, 8, 109, 47, 8
-  CONTROL "Descripción", -1, "Static", WS_GROUP, 8, 72, 40, 8
+  CONTROL "Comercio eléctronico", -1, "Button", BS_GROUPBOX, 2, 76, 278, 79
+  CONTROL "ID web", -1, "Static", WS_GROUP, 8, 129, 27, 8
+  CONTROL "Orden Internet", -1, "Static", WS_GROUP, 8, 141, 47, 8
+  CONTROL "Descripción", -1, "Static", WS_GROUP, 8, 104, 40, 8
+  CONTROL "Clasificación", -1, "Button", BS_GROUPBOX, 2, 46, 278, 27
 }
 
 TBLCNV DIALOG DISCARDABLE 112, 76, 239, 114
@@ -12184,10 +12192,12 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Materia primas"
 FONT 8, "MS Sans Serif"
 {
+  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 3, 2, 382, 146
   CONTROL "&Series [F6]", 3, "Button", WS_TABSTOP, 2, 152, 50, 14
+  CONTROL "A&nterior [F7]", 4, "Button", 0x00000000, 56, 152, 50, 14
+  CONTROL "&Siguiente [F8]", 5, "Button", 0x00000000, 112, 152, 50, 14
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 279, 152, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 334, 152, 50, 14
-  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 3, 2, 382, 146
 }
 
 MAQUINA DIALOG DISCARDABLE 64, 85, 610, 350
@@ -15042,7 +15052,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-ART_14 DIALOG DISCARDABLE 36, 16, 496, 361
+ART_logistica DIALOG DISCARDABLE 36, 16, 496, 361
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
@@ -15056,60 +15066,54 @@ FONT 8, "MS Sans Serif"
   CONTROL "Kg", 170, "Edit", WS_BORDER|WS_TABSTOP, 165, 133, 20, 11
   CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 101, 146, 62, 11
   CONTROL "Lt", 130, "Edit", WS_BORDER|WS_TABSTOP, 165, 146, 20, 11
-  CONTROL "Aplicar factor de conversión", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 160, 101, 10
-  CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 101, 173, 62, 11
   CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 401, 120, 62, 11
   CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 401, 132, 62, 11
   CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 401, 144, 62, 11
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 401, 173, 41, 11
-  CONTROL "", 251, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 445, 173, 41, 41
-  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 101, 201, 62, 11
-  CONTROL "", 425, "Edit", WS_BORDER, 166, 201, 186, 11
-  CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 100, 228, 62, 11
-  CONTROL "", 431, "Edit", WS_BORDER, 165, 228, 186, 11
-  CONTROL "", 300, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 101, 311, 62, 11
-  CONTROL "", 310, "Edit", WS_BORDER, 166, 311, 20, 11
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 101, 324, 62, 11
-  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 101, 337, 62, 11
-  CONTROL "", 340, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 226, 311, 62, 11
-  CONTROL "", 350, "Edit", WS_BORDER, 290, 311, 20, 11
-  CONTROL "", 360, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 226, 324, 62, 11
-  CONTROL "", 370, "Edit", WS_BORDER, 290, 324, 20, 11
-  CONTROL "", 380, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 401, 311, 62, 11
-  CONTROL "", 390, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 401, 324, 62, 11
-  CONTROL "", 400, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 401, 337, 63, 11
-  CONTROL "", 410, "Edit", WS_BORDER, 465, 311, 20, 11
+  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 101, 203, 62, 11
+  CONTROL "", 425, "Edit", WS_BORDER, 166, 203, 186, 11
+  CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 100, 176, 62, 11
+  CONTROL "", 431, "Edit", WS_BORDER, 165, 176, 186, 11
+  CONTROL "", 300, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 101, 232, 62, 11
+  CONTROL "", 310, "Edit", WS_BORDER, 166, 232, 20, 11
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 101, 245, 62, 11
+  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 101, 258, 62, 11
+  CONTROL "", 340, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 226, 232, 62, 11
+  CONTROL "", 350, "Edit", WS_BORDER, 290, 232, 20, 11
+  CONTROL "", 360, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 226, 245, 62, 11
+  CONTROL "", 370, "Edit", WS_BORDER, 290, 245, 20, 11
+  CONTROL "", 380, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 401, 232, 62, 11
+  CONTROL "", 390, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 401, 245, 62, 11
+  CONTROL "", 400, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 401, 258, 63, 11
+  CONTROL "", 410, "Edit", WS_BORDER, 465, 232, 20, 11
   CONTROL "Unidades de venta", -1, "Button", BS_GROUPBOX, 44, 66, 446, 40
-  CONTROL "Presentación artículo", -1, "Button", BS_GROUPBOX, 44, 108, 447, 81
-  CONTROL "Dimensiones caja", -1, "Button", BS_GROUPBOX, 44, 300, 304, 52
-  CONTROL "Palets", -1, "Button", BS_GROUPBOX, 350, 300, 141, 52
+  CONTROL "Presentación artículo", -1, "Button", BS_GROUPBOX, 44, 108, 447, 55
+  CONTROL "Dimensiones caja", -1, "Button", BS_GROUPBOX, 44, 221, 304, 52
+  CONTROL "Palets", -1, "Button", BS_GROUPBOX, 350, 221, 141, 52
   CONTROL "Cajas", -1, "Static", WS_GROUP, 50, 81, 21, 8
   CONTROL "Unidades", -1, "Static", WS_GROUP, 50, 93, 32, 8
   CONTROL "Largo", 141, "Static", WS_GROUP, 356, 123, 23, 8
   CONTROL "Alto", 151, "Static", WS_GROUP, 356, 135, 17, 8
   CONTROL "Ancho", 161, "Static", WS_GROUP, 356, 147, 26, 8
-  CONTROL "Largo", -1, "Static", WS_GROUP, 49, 314, 21, 8
-  CONTROL "Alto", -1, "Static", WS_GROUP, 49, 327, 19, 8
-  CONTROL "Ancho", -1, "Static", WS_GROUP, 49, 340, 24, 8
-  CONTROL "Nº Cajas", -1, "Static", WS_GROUP, 356, 314, 35, 8
-  CONTROL "Base", -1, "Static", WS_GROUP, 356, 327, 35, 8
-  CONTROL "Altura", -1, "Static", WS_GROUP, 356, 340, 35, 8
+  CONTROL "Largo", -1, "Static", WS_GROUP, 49, 235, 21, 8
+  CONTROL "Alto", -1, "Static", WS_GROUP, 49, 248, 19, 8
+  CONTROL "Ancho", -1, "Static", WS_GROUP, 49, 261, 24, 8
+  CONTROL "Nº Cajas", -1, "Static", WS_GROUP, 356, 235, 35, 8
+  CONTROL "Base", -1, "Static", WS_GROUP, 356, 248, 35, 8
+  CONTROL "Altura", -1, "Static", WS_GROUP, 356, 261, 35, 8
   CONTROL "Und. medición", -1, "Static", WS_GROUP, 50, 123, 51, 8
   CONTROL "Peso", -1, "Static", WS_GROUP, 50, 136, 35, 8
   CONTROL "Volumen", -1, "Static", WS_GROUP, 50, 149, 35, 8
-  CONTROL "Peso", -1, "Static", WS_GROUP, 189, 314, 35, 8
-  CONTROL "Volumen", -1, "Static", WS_GROUP, 189, 326, 35, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 189, 235, 35, 8
+  CONTROL "Volumen", -1, "Static", WS_GROUP, 189, 247, 35, 8
   CONTROL "Creación", -1, "Static", WS_GROUP, 50, 41, 33, 8
   CONTROL "Último cambio", -1, "Static", WS_GROUP, 50, 54, 49, 8
-  CONTROL "Frase", -1, "Static", WS_GROUP, 50, 204, 39, 8
-  CONTROL "Caducidad", -1, "Static", WS_GROUP, 356, 176, 40, 8
+  CONTROL "Frase", -1, "Static", WS_GROUP, 50, 206, 39, 8
   CONTROL "", -1, "Button", BS_GROUPBOX, 43, 29, 446, 37
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Logística del artículo ( número de lote, peso, volumen, fecha de caducidad, ... )", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
-  CONTROL "Factor", -1, "Static", WS_GROUP, 50, 176, 25, 8
-  CONTROL "Frase publicitaria", -1, "Button", BS_GROUPBOX, 43, 191, 446, 25
-  CONTROL "Producción", -1, "Button", BS_GROUPBOX, 44, 218, 446, 25
-  CONTROL "Sección", -1, "Static", WS_GROUP, 50, 231, 39, 8
+  CONTROL "Frase publicitaria", -1, "Button", BS_GROUPBOX, 43, 193, 446, 25
+  CONTROL "Producción", -1, "Button", BS_GROUPBOX, 44, 166, 446, 25
+  CONTROL "Sección", -1, "Static", WS_GROUP, 50, 179, 39, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
@@ -19225,13 +19229,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 141, "Edit", WS_BORDER, 135, 59, 234, 11
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 74, 71, 60, 11
   CONTROL "", 151, "Edit", WS_BORDER, 135, 71, 234, 11
-  CONTROL "Datos", -1, "Button", BS_GROUPBOX, 2, 2, 374, 126
+  CONTROL "Datos", -1, "Button", BS_GROUPBOX, 2, 2, 374, 85
   CONTROL "Grupo de familia", -1, "Static", WS_GROUP, 8, 14, 56, 8
   CONTROL "Familia", -1, "Static", WS_GROUP, 8, 26, 27, 8
   CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 8, 38, 45, 8
   CONTROL "Categoria", -1, "Static", WS_GROUP, 8, 50, 35, 8
   CONTROL "Temporada", -1, "Static", WS_GROUP, 8, 62, 41, 8
   CONTROL "Fabricante", -1, "Static", WS_GROUP, 8, 74, 39, 8
+  CONTROL "", 200, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 74, 99, 113, 95
+  CONTROL "Clasificación", -1, "Button", BS_GROUPBOX, 2, 89, 374, 27
 }
 
 ADVANTAGEAUDITOR_OPERACIONES DIALOG DISCARDABLE 15, 83, 572, 418
