--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -6633,33 +6633,33 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 274, 152, 75
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 252, 30, 104, 12
-  CONTROL "", 171, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 397, 30, 65, 12
-  CONTROL "", 180, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 42, 210, 12
-  CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 54, 104, 12
-  CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 397, 54, 65, 12
-  CONTROL "", 183, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 66, 210, 12
-  CONTROL "", 184, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 78, 70, 12
-  CONTROL "", 185, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 323, 78, 139, 12
-  CONTROL "", 186, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 90, 104, 12
-  CONTROL "", 187, "Edit", WS_BORDER, 397, 90, 65, 12
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 252, 102, 54, 12
-  CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 307, 102, 155, 12
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 252, 114, 54, 12
-  CONTROL "", 231, "Edit", WS_BORDER|WS_TABSTOP, 307, 114, 155, 12
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 495, 30, 56, 12
-  CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 552, 30, 110, 12
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 495, 42, 56, 12
-  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 552, 42, 110, 12
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 495, 54, 167, 12
-  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 495, 78, 56, 12
-  CONTROL "", 251, "Edit", WS_BORDER|WS_TABSTOP, 552, 78, 110, 12
-  CONTROL "", 252, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 495, 90, 56, 12
-  CONTROL "", 253, "Edit", ES_RIGHT|WS_BORDER, 552, 90, 110, 12
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 495, 102, 56, 12
-  CONTROL "", 261, "Edit", WS_BORDER|WS_TABSTOP, 552, 102, 110, 12
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 495, 114, 56, 12
+  CONTROL "", 171, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 397, 30, 65, 11
+  CONTROL "", 180, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 42, 210, 11
+  CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 54, 104, 11
+  CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 397, 54, 65, 11
+  CONTROL "", 183, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 66, 210, 11
+  CONTROL "", 184, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 78, 70, 11
+  CONTROL "", 185, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 323, 78, 139, 11
+  CONTROL "", 186, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 252, 90, 104, 11
+  CONTROL "", 187, "Edit", WS_BORDER, 397, 90, 65, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 252, 102, 54, 11
+  CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 307, 102, 155, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 252, 114, 54, 11
+  CONTROL "", 231, "Edit", WS_BORDER|WS_TABSTOP, 307, 114, 155, 11
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 495, 30, 56, 11
+  CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 552, 30, 110, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 495, 42, 56, 11
+  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 552, 42, 110, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 495, 54, 167, 11
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 495, 78, 56, 11
+  CONTROL "", 251, "Edit", WS_BORDER|WS_TABSTOP, 552, 78, 110, 11
+  CONTROL "", 252, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 495, 90, 56, 11
+  CONTROL "", 253, "Edit", ES_RIGHT|WS_BORDER, 552, 90, 110, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 495, 102, 56, 11
+  CONTROL "", 261, "Edit", WS_BORDER|WS_TABSTOP, 552, 102, 110, 11
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 495, 114, 56, 11
   CONTROL "", 191, "TBitMap", 0x00800000, 552, 114, 16, 11
-  CONTROL "", 192, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 570, 114, 92, 12
+  CONTROL "", 192, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 570, 114, 92, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 128, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 98, 128, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 153, 128, 50, 14
@@ -7444,7 +7444,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Desde", 1111, "Static", WS_GROUP, 299, 88, 26, 8
   CONTROL "Hasta", 1121, "Static", WS_GROUP, 397, 88, 24, 8
   CONTROL "Rangos", -1, "Button", BS_GROUPBOX, 184, 72, 485, 299
-  CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|WS_BORDER|WS_TABSTOP, 2, 72, 179, 327
+  CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_TRACKSELECT|WS_BORDER|WS_TABSTOP, 2, 72, 179, 327
 }
 
 FASTREPORTARTICULOS_1 DIALOG DISCARDABLE 9, 8, 480, 240
@@ -14254,90 +14254,90 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 31, 149, 23, 12
 }
 
-LPRODUCIDO DIALOG DISCARDABLE 144, 103, 386, 182
+LPRODUCIDO DIALOG DISCARDABLE 144, 103, 386, 213
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Materia primas"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 3, 2, 382, 146
-  CONTROL "&Series [F6]", 3, "Button", WS_TABSTOP, 2, 152, 50, 14
-  CONTROL "A&nterior [F7]", 4, "Button", 0x00000000, 56, 152, 50, 14
-  CONTROL "&Siguiente [F8]", 5, "Button", 0x00000000, 112, 152, 50, 14
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 279, 152, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 334, 152, 50, 14
+  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 3, 2, 382, 175
+  CONTROL "&Series [F6]", 3, "Button", WS_TABSTOP, 2, 180, 50, 14
+  CONTROL "A&nterior [F7]", 4, "Button", 0x00000000, 56, 180, 50, 14
+  CONTROL "&Siguiente [F8]", 5, "Button", 0x00000000, 112, 180, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 279, 180, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 334, 180, 50, 14
 }
 
-LPRODUCIDO_1 DIALOG DISCARDABLE 144, 103, 378, 154
+LPRODUCIDO_1 DIALOG DISCARDABLE 144, 103, 380, 157
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 74, 11, 68, 12
   CONTROL "", 111, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 144, 11, 227, 12
-  CONTROL "", 210, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 74, 23, 68, 12
-  CONTROL "", 320, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 35, 68, 12
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 74, 49, 68, 12
-  CONTROL "", 222, "Edit", WS_BORDER, 144, 49, 227, 12
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 74, 60, 68, 12
-  CONTROL "", 232, "Edit", WS_BORDER, 144, 60, 227, 12
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 73, 68, 12
-  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 85, 68, 12
-  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 74, 97, 68, 12
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 109, 68, 12
-  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 83, 53, 12
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 247, 83, 20, 12
-  CONTROL "", 172, "Edit", ES_RIGHT|WS_BORDER, 318, 83, 53, 12
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 96, 53, 12
-  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 247, 96, 20, 12
-  CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 318, 96, 53, 12
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 192, 109, 30, 12
-  CONTROL "", 191, "Edit", WS_BORDER, 223, 109, 148, 12
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER, 74, 127, 68, 12
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER, 192, 127, 75, 12
-  CONTROL "Producto", -1, "Button", BS_GROUPBOX, 2, 2, 374, 146
-  CONTROL "Cajas ", 121, "Static", WS_GROUP, 8, 76, 23, 8
-  CONTROL "Total unidades", -1, "Static", WS_GROUP, 8, 100, 50, 8
-  CONTROL "Unidades", -1, "Static", WS_GROUP, 8, 88, 34, 8
+  CONTROL "", 210, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 74, 24, 68, 12
+  CONTROL "", 320, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 38, 68, 12
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 74, 51, 68, 12
+  CONTROL "", 222, "Edit", WS_BORDER, 144, 51, 227, 12
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 74, 65, 68, 12
+  CONTROL "", 232, "Edit", WS_BORDER, 144, 65, 227, 12
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 78, 68, 12
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 91, 68, 12
+  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 74, 104, 68, 12
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 117, 68, 12
+  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 91, 53, 12
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 247, 91, 20, 12
+  CONTROL "", 172, "Edit", ES_RIGHT|WS_BORDER, 318, 91, 53, 12
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 104, 53, 12
+  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 247, 104, 20, 12
+  CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 318, 104, 53, 12
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 192, 117, 30, 12
+  CONTROL "", 191, "Edit", WS_BORDER, 223, 117, 148, 12
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER, 74, 137, 68, 12
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER, 192, 137, 75, 12
+  CONTROL "Producto", -1, "Button", BS_GROUPBOX, 2, 2, 374, 151
+  CONTROL "Cajas ", 121, "Static", WS_GROUP, 8, 81, 23, 8
+  CONTROL "Total unidades", -1, "Static", WS_GROUP, 8, 107, 50, 8
+  CONTROL "Unidades", -1, "Static", WS_GROUP, 8, 93, 34, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 8, 14, 27, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 7, 123, 365, 1
-  CONTROL "Stock actual", -1, "Static", WS_GROUP, 146, 130, 44, 8
-  CONTROL "Precio", -1, "Static", WS_GROUP, 8, 112, 23, 8
-  CONTROL "Importe", -1, "Static", WS_GROUP, 8, 130, 26, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 146, 112, 31, 8
-  CONTROL "Peso", -1, "Static", WS_GROUP, 146, 86, 20, 8
-  CONTROL "Volumen", -1, "Static", WS_GROUP, 146, 99, 30, 8
-  CONTROL "Tot. peso", -1, "Static", WS_GROUP, 269, 86, 37, 8
-  CONTROL "Tot. volumen", -1, "Static", WS_GROUP, 269, 99, 42, 8
-  CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 8, 63, 51, 8
-  CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 8, 52, 51, 8
-  CONTROL "Nº lote", 211, "Static", WS_GROUP, 8, 26, 25, 8
-  CONTROL "Caducidad", 321, "Static", WS_GROUP, 8, 38, 51, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 7, 133, 365, 1
+  CONTROL "Stock actual", -1, "Static", WS_GROUP, 146, 140, 44, 8
+  CONTROL "Precio", -1, "Static", WS_GROUP, 8, 120, 23, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 8, 140, 26, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 146, 120, 31, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 146, 95, 20, 8
+  CONTROL "Volumen", -1, "Static", WS_GROUP, 146, 108, 30, 8
+  CONTROL "Tot. peso", -1, "Static", WS_GROUP, 269, 95, 37, 8
+  CONTROL "Tot. volumen", -1, "Static", WS_GROUP, 269, 108, 42, 8
+  CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 8, 68, 51, 8
+  CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 8, 54, 51, 8
+  CONTROL "Nº lote", 211, "Static", WS_GROUP, 8, 27, 25, 8
+  CONTROL "Caducidad", 321, "Static", WS_GROUP, 8, 41, 51, 8
 }
 
-LPRODUCIDO_2 DIALOG DISCARDABLE 144, 103, 378, 130
+LPRODUCIDO_2 DIALOG DISCARDABLE 144, 103, 378, 149
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 74, 11, 60, 12
   CONTROL "", 101, "Edit", WS_BORDER, 135, 11, 234, 12
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 74, 23, 60, 12
-  CONTROL "", 111, "Edit", WS_BORDER, 135, 23, 234, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 74, 35, 60, 12
-  CONTROL "", 121, "Edit", WS_BORDER, 135, 35, 234, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 74, 47, 60, 12
-  CONTROL "", 131, "Edit", WS_BORDER, 135, 47, 234, 12
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 74, 59, 60, 12
-  CONTROL "", 141, "Edit", WS_BORDER, 135, 59, 234, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 74, 71, 60, 12
-  CONTROL "", 151, "Edit", WS_BORDER, 135, 71, 234, 12
-  CONTROL "Datos", -1, "Button", BS_GROUPBOX, 2, 2, 374, 85
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 74, 25, 60, 12
+  CONTROL "", 111, "Edit", WS_BORDER, 135, 25, 234, 12
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 74, 39, 60, 12
+  CONTROL "", 121, "Edit", WS_BORDER, 135, 39, 234, 12
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 74, 53, 60, 12
+  CONTROL "", 131, "Edit", WS_BORDER, 135, 53, 234, 12
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 74, 67, 60, 12
+  CONTROL "", 141, "Edit", WS_BORDER, 135, 67, 234, 12
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 74, 81, 60, 12
+  CONTROL "", 151, "Edit", WS_BORDER, 135, 81, 234, 12
+  CONTROL "Datos", -1, "Button", BS_GROUPBOX, 2, 2, 374, 95
   CONTROL "Grupo de familia", -1, "Static", WS_GROUP, 8, 14, 56, 8
-  CONTROL "Familia", -1, "Static", WS_GROUP, 8, 26, 27, 8
-  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 8, 38, 45, 8
-  CONTROL "Categoria", -1, "Static", WS_GROUP, 8, 50, 35, 8
-  CONTROL "Temporada", -1, "Static", WS_GROUP, 8, 62, 41, 8
-  CONTROL "Fabricante", -1, "Static", WS_GROUP, 8, 74, 39, 8
-  CONTROL "", 200, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 74, 99, 113, 95
-  CONTROL "Clasificación", -1, "Button", BS_GROUPBOX, 2, 89, 374, 27
+  CONTROL "Familia", -1, "Static", WS_GROUP, 8, 28, 27, 8
+  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 8, 42, 45, 8
+  CONTROL "Categoria", -1, "Static", WS_GROUP, 8, 56, 35, 8
+  CONTROL "Temporada", -1, "Static", WS_GROUP, 8, 70, 41, 8
+  CONTROL "Fabricante", -1, "Static", WS_GROUP, 8, 84, 39, 8
+  CONTROL "", 200, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 74, 109, 113, 95
+  CONTROL "Clasificación", -1, "Button", BS_GROUPBOX, 2, 99, 374, 27
 }
 
 LPROMO DIALOG DISCARDABLE 37, 119, 260, 59
